mdapipkg/objects/Migrated_Lifetime_Lines__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Currency__c</fullName>
        <formula>Open_Rev_Rec_Header__r.Accounting_Currency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_General_Ledger_Account__c</fullName>
        <formula>Product__r.ffrr_exa__RevenueRecognitionAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deferred Revenue General Ledger Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_Date__c</fullName>
        <label>Legacy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Original_Amount__c</fullName>
        <label>Legacy Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Start_Date__c</fullName>
        <label>Legacy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migrated_Remaining_Opening_Balance__c</fullName>
        <label>Migrated Remaining Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migrated_Rev_Rec_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Rev Rec Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrated_Rev_Rec_End_Date__c</fullName>
        <label>Migrated Rev Rec End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migrated_Rev_Rec_Recognized_To_Date__c</fullName>
        <label>Migrated Rev Rec Recognized To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migrated_Rev_Rec_Remaining__c</fullName>
        <formula>Migrated_Remaining_Opening_Balance__c -  Migrated_Rev_Rec_Recognized_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Migrated Rev Rec Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migrated_Rev_Rec_Start_Date__c</fullName>
        <label>Migrated Rev Rec Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <formula>Quantity__c * ( Unit_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Rev_Rec_Header__c</fullName>
        <label>Migrated Lifetime Header</label>
        <referenceTo>Migrated_Lifetime_Header__c</referenceTo>
        <relationshipLabel>Migrated Lifetime Lines</relationshipLabel>
        <relationshipName>Open_Rev_Rec_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Post_Status__c</fullName>
        <formula>TEXT(Open_Rev_Rec_Header__r.Post_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Open_Rev_Rec_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Revenue_General_Ledger_Account__c</fullName>
        <formula>Product__r.c2g__CODASalesRevenueAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Revenue General Ledger Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffrrtemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>ffrr__Template__c</referenceTo>
        <relationshipName>Open_Rev_Rec_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Migrated Lifetime Lines</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>ffrrtemplate__c</columns>
        <columns>Sales_Revenue_General_Ledger_Account__c</columns>
        <columns>Deferred_Revenue_General_Ledger_Account__c</columns>
        <columns>Migrated_Remaining_Opening_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRL-{00000000}</displayFormat>
        <label>Open Rev Rec Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migrated Lifetime Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>